# KittyVoiceController

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml
src/kitty_voice_controller/: __init__.py  cli.py  config.py  controller.py  kitty.py  summarizer.py  voice_input.py  voice_output.py
